--- a/chelper.properties
+++ b/chelper.properties
@@ -1,5 +1,5 @@
 #
-#Mon Jun 01 21:53:14 MSK 2015
+#Wed Mar 06 04:36:25 MSK 2019
 smartTesting=true
 archiveDirectory=archive
 defaultDirectory=src/task
@@ -8,8 +8,8 @@ outputClass=java.io.PrintWriter
 excludePackages=java.,javax.,com.sun.
 outputDirectory=src
 author=
-libraryMigrated=true
-failOnIntegerOverflowForNewTasks=false
+failOnIntegerOverflowForNewTasks=true
 inputClass=task.InputReader
 enableUnitTests=false
 testDirectory=lib/test
+libraryVersion=2
