--- a/chelper.properties
+++ b/chelper.properties
@@ -1,6 +1,6 @@
 #
-#Wed Mar 06 04:36:25 MSK 2019
-smartTesting=true
+#Tue Mar 19 22:50:08 MSK 2019
+smartTesting=false
 archiveDirectory=archive
 defaultDirectory=src/task
 extensionProposed=true
